--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
-    "lucide-react": "^0.562.0",
-    "xlsx": "^0.18.5"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@google/genai": "1.34.0",
+    "lucide-react": "0.460.0",
+    "xlsx": "0.18.5",
+    "@supabase/supabase-js": "2.39.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
